Fix dimensions of the hidden color input in the Layout panel
The 'Show a quick highlight on the focused object' feature
available in chrome://settings/accessibility draws a highlight
around focused objects. The color input in the Layout panel
is not visible and didn't have proper dimensions although the
a11y still used its dimensions to draw the highlight. This CL
fixes the dimension and the position of the hidden color input.

Fixed: chromium:1171261

--- a/front_end/elements/layoutPane.css
+++ b/front_end/elements/layoutPane.css
@@ -145,12 +145,19 @@
   height: 10px;
   margin: 0 0 0 8px;
   width: 10px;
+  position: relative;
 }
 
 .color-picker-label:hover,
 .color-picker-label:focus {
   border: 1px solid var(--accent-color-hover);
   transform: scale(1.2);
+}
+
+input[type=color] {
+  width: 10px;
+  height: 10px;
+  position: absolute;
 }
 
 .node-text-container {
